<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hi House</string>
    <string name="action_settings">Settings</string>
    <string name="user">Usuario</string>
    <string name="password">Password</string>
    <string name="login">Ingresar</string>
    <string name="ic_voice_desc">Voice input</string>
    <string name="userinfo_name">Nombre</string>
    <string name="userinfo_mail">E-Mail</string>
    <string name="userinfo_admin">Administrador</string>
    <string name="userinfo_pwd">Password</string>
    <string name="userinfo_pwd_confirm">Confirmacion</string>
    <string name="userinfo_profiles">Perfiles</string>
    <string name="deviceinfo_name">Nombre</string>
    <string name="deviceinfo_voice_command">Comando de Voz</string>
    <string name="deviceinfo_type">Tipo</string>
    <string name="deviceinfo_subtype">subtipo</string>
    <string name="deviceinfo_pin1">pin 1</string>
    <string name="deviceinfo_pin2">pin 2</string>
    <string name="deviceinfo_pin3">pin 3</string>
    <string name="profileinfo_name">Nombre</string>
    <string name="profileinfo_desc">Descripción de Voz</string>
    <string name="profileinfo_devices">Dispositivos</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>
    <string name="accept">Aceptar</string>
    <string name="select">Seleccionar</string>
    <string name="drawer_open">Menu Abierto</string>
    <string name="drawer_close">Menu Cerrado</string>
    <string name="drawer_title">Menu</string>
    <string name="on_switch">On</string>
    <string name="off_switch">Off</string>
    <string name="open_close_btn_desc">Open/Close button</string>
    <string name="start_stop_btn_desc">Start/Stop button</string>
    <string name="alarm_btn_desc">Alarm button</string>
    <string name="simulator_select">Seleccione un perfil:</string>
    <string name="temp">Temp:</string>
    <string name="popup_alarm_dest_title">Seleccione un destinatario del alerta</string>
    <string name="speak_box_text">Hable ahora</string>
    <string name="checkbox_remember">Recordar Usuario</string>
    <string name="select_item">Seleccione un Perfil</string>
    <string name="action_setup_ip">Set Server URL</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items_admin">
        <item>Mis Dispositivos</item>
        <item>Agregar Usuario</item>
        <item>Editar Usuario</item>
        <item>Agregar Perfil</item>
        <item>Editar Perfil</item>
        <item>Agregar Dispositivo</item>
        <item>Editar Dispositivo</item>
        <item>Simulador</item>
    </string-array>
     <string-array name="nav_drawer_items_default">
        <item>Mis Dispositivos</item>
        <item>Editar Usuario</item>
    </string-array>
    <!-- Device type Items ¡¡¡OJO ESTAN EN ORDEN SEGUN LOS TIPOS DE DEVICES!!! -->
    <string-array name="device_type_items">
        <item>Sensor Termico</item>
        <item>Sensor Luminico</item>
        <item>Luz</item>
        <item>A/C</item>
        <item>Puerta</item>
        <item>Sensor de Apertura</item>
    </string-array>
    <!-- Device Subtypes Items -->
    <string-array name="device_term_subtype_items">
        <item>Frio</item>
        <item>Calor</item>
        <item>Ambas</item>
    </string-array>

    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
