<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
     android:gravity="center_horizontal" >
    
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textColor="#008A12"
        android:gravity="center"
        android:text="@string/app_name"
        android:layout_marginBottom="50dp" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#008A12"
        android:gravity="center"
        android:text="@string/user" />
    
    <EditText
	       android:id="@+id/user"
	       android:gravity="center"
	       android:inputType="text"
	       android:lines="1"
	       android:layout_width="200dp"
	       android:layout_height="wrap_content"
	       android:textSize="20sp"
	       android:layout_marginBottom="20dp" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#008A12"
        android:gravity="center"
        android:text="@string/password" />
    
    <EditText
	       android:id="@+id/pass"
	       android:gravity="center"
	       android:inputType="numberPassword"
	       android:lines="1"
	       android:layout_width="200dp"
	       android:layout_height="wrap_content"
	       android:textSize="20sp"
	       android:layout_marginBottom="20dp" />
    
    <Button
		    android:id="@+id/login"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/login"
		    android:textSize="30sp"
		    android:textColor="#008A12"
		    android:gravity="center"
		    android:layout_margin="0dp" />
</LinearLayout>