<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal" >
	
	<LinearLayout
	    android:id="@+id/button_bar"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:orientation="vertical" >

		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical" >

		    <Switch
		        android:id="@+id/on_off_switch"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="10dp"
		        android:switchTextAppearance="@style/SwitchTextAppearance"
		        android:textOff="@string/off_switch"
		        android:textOn="@string/on_switch" />

		    <ImageButton
		        android:id="@+id/open_close_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:background="#ffffff"
		        android:contentDescription="@string/open_close_btn_desc"
		        android:src="@drawable/ic_action_secure" />

		    <ImageButton
		        android:id="@+id/start_stop_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_marginRight="20dp"
		        android:contentDescription="@string/start_stop_btn_desc"
		        android:src="@drawable/ic_action_play_over_video" />
		</RelativeLayout>

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >

		    <TextView 
		        android:layout_width="0dp"
		    	android:layout_height="wrap_content"
		    	android:layout_weight="2"
		    	android:layout_marginLeft="2dp"
		    	android:text="@string/temp"/>

			<SeekBar
			    android:id="@+id/seekBar"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="5dp"
			    android:layout_weight="6"
			    android:max="15" />

			<EditText 
			    android:layout_height="wrap_content"
			    android:layout_width="0dp"
			    android:layout_weight="2"
			    android:inputType="number"
			    android:id="@+id/temp_input"/>
		</LinearLayout>
	</LinearLayout>
	<ExpandableListView
		android:id="@+id/profiles_explist"
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:layout_above="@id/button_bar"/>
</RelativeLayout>