<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
    	android:background="@drawable/background"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    tools:context="com.web.ones.hihouse.DeviceInfoFragment"
	    android:orientation="vertical"
	    android:gravity="center_horizontal"
	    android:layout_margin="10dp" >
		
	    <LinearLayout 
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:gravity="start" >
	    	<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="20sp"
		        android:textColor="@color/verde_texto"
		        android:text="@string/deviceinfo_name" />
	    	<EditText
		       android:id="@+id/deviceinfo_name"
		       android:gravity="center"
		       android:inputType="text"
		       android:lines="1"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:textSize="20sp"
		       android:background="#FFFFFF"
		       android:layout_marginLeft="6dp"
		       android:layout_marginRight="6dp"
		       android:layout_marginBottom="20dp" />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:gravity="start" >
	    	<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="20sp"
		        android:textColor="@color/verde_texto"
		        android:text="@string/deviceinfo_voice_command" />
	    	<EditText
		       android:id="@+id/deviceinfo_voice_command"
		       android:gravity="center"
		       android:inputType="text"
		       android:lines="1"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:textSize="20sp"
		       android:background="#FFFFFF"
		       android:layout_marginLeft="6dp"
		       android:layout_marginRight="6dp"
		       android:layout_marginBottom="20dp" />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:gravity="start" >
	    	<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="20sp"
		        android:textColor="@color/verde_texto"
		        android:text="@string/deviceinfo_type" />
	    	<Spinner
	    	   android:id="@+id/deviceinfo_type"
		       android:gravity="center"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:textSize="20sp"
		       android:layout_marginLeft="6dp"
		       android:layout_marginRight="6dp"
		       android:layout_marginBottom="20dp" />
	    </LinearLayout>
	    <LinearLayout
	        android:id="@+id/deviceinfo_subtype_frame" 
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:gravity="start"
	    	android:visibility="gone" >
	    	<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="20sp"
		        android:textColor="@color/verde_texto"
		        android:text="@string/deviceinfo_subtype" />
	    	<Spinner
	    	    android:id="@+id/deviceinfo_subtype"
	    	    android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content" />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:gravity="start" >
	    	<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="20sp"
		        android:textColor="@color/verde_texto"
		        android:text="@string/deviceinfo_pin1" />
	    	<CheckBox
	    	    android:id="@+id/deviceinfo_pin1_enable"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content" />
	    	<TextView
	    	    android:id="@+id/deviceinfo_pin1_value"
	    	    android:layout_width="fill_parent"
	    	    android:textSize="20sp"
		        android:textColor="@color/verde_texto"
	    	    android:layout_height="wrap_content" />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:gravity="start" >
	    	<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="20sp"
		        android:textColor="@color/verde_texto"
		        android:text="@string/deviceinfo_pin2" />
	    	<CheckBox
	    	    android:id="@+id/deviceinfo_pin2_enable"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content" />
	    	<TextView
	    	    android:id="@+id/deviceinfo_pin2_value"
	    	    android:layout_width="fill_parent"
	    	    android:textSize="20sp"
		        android:textColor="@color/verde_texto"
	    	    android:layout_height="wrap_content" />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:gravity="start" >
	    	<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="20sp"
		        android:textColor="@color/verde_texto"
		        android:text="@string/deviceinfo_pin3" />
	    	<CheckBox
	    	    android:id="@+id/deviceinfo_pin3_enable"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content" />
	    	<TextView
	    	    android:id="@+id/deviceinfo_pin3_value"
	    	    android:layout_width="fill_parent"
	    	    android:textSize="20sp"
		        android:textColor="@color/verde_texto"
	    	    android:layout_height="wrap_content" />
	    </LinearLayout>
	    
	    <Button
		    android:id="@+id/deviceinfo_edit"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/edit"
		    android:onClick="onEditPressed"
		    android:textSize="20sp"
		    android:textColor="@color/verde_texto"
		    android:gravity="center"
		    android:layout_margin="0dp" />
	    <Button
		    android:id="@+id/deviceinfo_delete"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/delete"
		    android:onClick="onDeletePressed"
		    android:textSize="20sp"
		    android:textColor="@color/verde_texto"
		    android:gravity="center"
		    android:layout_margin="0dp" />
	    <Button
		    android:id="@+id/deviceinfo_confirm"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/confirm"
		    android:onClick="onConfirmEdition"
		    android:textSize="20sp"
		    android:textColor="@color/verde_texto"
		    android:gravity="center"
		    android:layout_margin="0dp"
		    android:visibility="gone" />
	    <Button
		    android:id="@+id/deviceinfo_cancel"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/cancel"
		    android:onClick="onCancelEdition"
		    android:textSize="20sp"
		    android:textColor="@color/verde_texto"
		    android:gravity="center"
		    android:layout_margin="0dp"
		    android:visibility="gone" />
	</LinearLayout>
</ScrollView>